; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_if_emac.c_emac_miibus_writereg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_if_emac.c_emac_miibus_writereg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.emac_softc = type { i32 }

@EMAC_MAC_MADR = common dso_local global i32 0, align 4
@EMAC_MAC_MWTD = common dso_local global i32 0, align 4
@EMAC_MAC_MCMD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"timeout waiting for mii write\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @emac_miibus_writereg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emac_miibus_writereg(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.emac_softc*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.emac_softc* @device_get_softc(i32 %11)
  store %struct.emac_softc* %12, %struct.emac_softc** %10, align 8
  %13 = load %struct.emac_softc*, %struct.emac_softc** %10, align 8
  %14 = load i32, i32* @EMAC_MAC_MADR, align 4
  %15 = load i32, i32* %7, align 4
  %16 = shl i32 %15, 8
  %17 = load i32, i32* %8, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @EMAC_WRITE_REG(%struct.emac_softc* %13, i32 %14, i32 %18)
  %20 = load %struct.emac_softc*, %struct.emac_softc** %10, align 8
  %21 = load i32, i32* @EMAC_MAC_MWTD, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @EMAC_WRITE_REG(%struct.emac_softc* %20, i32 %21, i32 %22)
  %24 = load %struct.emac_softc*, %struct.emac_softc** %10, align 8
  %25 = load i32, i32* @EMAC_MAC_MCMD, align 4
  %26 = call i32 @EMAC_WRITE_REG(%struct.emac_softc* %24, i32 %25, i32 1)
  %27 = load %struct.emac_softc*, %struct.emac_softc** %10, align 8
  %28 = call i32 @emac_miibus_iowait(%struct.emac_softc* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %33, label %30

30:                                               ; preds = %4
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @device_printf(i32 %31, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %37

33:                                               ; preds = %4
  %34 = load %struct.emac_softc*, %struct.emac_softc** %10, align 8
  %35 = load i32, i32* @EMAC_MAC_MCMD, align 4
  %36 = call i32 @EMAC_WRITE_REG(%struct.emac_softc* %34, i32 %35, i32 0)
  store i32 0, i32* %5, align 4
  br label %37

37:                                               ; preds = %33, %30
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local %struct.emac_softc* @device_get_softc(i32) #1

declare dso_local i32 @EMAC_WRITE_REG(%struct.emac_softc*, i32, i32) #1

declare dso_local i32 @emac_miibus_iowait(%struct.emac_softc*) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
